syntax = "proto3";
option java_multiple_files = true;
package gRPC;

// define service function
service PaxosServer {
  rpc Prepare(prepareMessage) returns (promise);
  rpc Commit(commitMessage) returns (commitResponse);
  rpc get(getRequest) returns (Response);
  rpc put(putRequest) returns (Response);
  rpc delete(deleteRequest) returns (Response);
}

// define service message
message deleteRequest{
  string key = 1;
}

message putRequest {
  string key = 1;
  string val = 2;
}

message prepareMessage {
  int64 ID = 1;
}

message promise {
  int64 largestID = 1;
  bool accept = 2;
}

message commitMessage {
  int64 id = 1;
  string key = 2;
  string val = 3;
  int32 method = 4;
}

message commitResponse {
  int64 largestID = 1;
  bool accept = 2;
}

message getRequest {
  string key = 1;
}

message Response {
  string response = 1;
}
